Bug 560216 - Referring to an accessor property with undefined [[Get]] and [[Set]] fields using an unqualified name should not assert.  r=dvander